# travel_tracker

./: Makefile  README.md  database.db  pyproject.toml  run.py
database/: database.db
ethreal_email/: create_email.py  output_formatted.json  script.sh
init/: schema.sql
src/core/models/settings/: db_connection_handler.py
src/core/repositories/: activities_repository.py  emails_invite_repository.py  links_repository.py  participants_repository.py  trips_repository.py
src/drivers/: email_sender.py
src/main/routes/: trip_routes.py
src/main/server/: server.py
src/tests/: conftest.py
src/tests/core/: test_emails_invite_repository.py  test_links_repository.py  test_trips_repository.py
src/v1/controllers/: link_creator.py  link_finder.py  trip_creator.py
src/v1/controllers/activity_controllers/: activity_creator.py  activity_finder.py
src/v1/controllers/participant_controllers/: participant_confirmer.py  participant_creator.py  participant_finder.py
src/v1/controllers/trip_controllers/: trip_confirmer.py  trip_creator.py  trip_finder.py
src/v1/main/routes/: activities_routes.py  links_routes.py  participants_routes.py  trips_routes.py
src/v1/main/server/: server.py
