[tool.poetry]
name = "travel-tracker"
version = "0.1.0"
description = ""
authors = ["Armando Solheiro <avgsolheiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pytest = "^8.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
